--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -60,6 +60,7 @@ jobs:
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
+      if: success() || failure()
       with:
         name: artifacts
         path: |
@@ -92,15 +93,23 @@ jobs:
         else
           dotnet stryker --reporter html --reporter progress --log-to-file
         fi
-        mkdir -p ../../artifacts
-        find StrykerOutput -name mutation-report.html -exec cp {} ../../artifacts/ \;
-        zip -r -q StrykerOutput.zip StrykerOutput
-        mv StrykerOutput.zip ../../artifacts/StrykerOutput.zip
       env:
         STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
 
+    - name: Archive mutation output
+      if: success() || failure()
+      run: |
+        cd tests/UnitTests
+        mkdir -p ../../artifacts
+        find StrykerOutput -name mutation-report.html -exec cp {} ../../artifacts/ \;
+        if [[ -d StrykerOutput ]]; then
+          zip -r -q StrykerOutput.zip StrykerOutput
+          mv StrykerOutput.zip ../../artifacts/StrykerOutput.zip
+        fi
+
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
+      if: success() || failure()
       with:
         name: artifacts
         path: |
