--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -61,6 +61,7 @@ jobs:
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
+      if: success() || failure()
       with:
         name: artifacts
         path: |
