--- a/.github/continuous-delivery.yml
+++ b/.github/continuous-delivery.yml
@@ -32,7 +32,7 @@ jobs:
   mutation-tests:
     name: 'Mutation Test'
     needs: build-and-test
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - *checkout
     - *setup-dotnet
