--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -103,8 +103,7 @@ jobs:
         mkdir -p ../../artifacts
         find StrykerOutput -name mutation-report.html -exec cp {} ../../artifacts/ \;
         if [[ -d StrykerOutput ]]; then
-          zip -r -q StrykerOutput.zip StrykerOutput
-          mv StrykerOutput.zip ../../artifacts/StrykerOutput.zip
+          mv StrykerOutput ../../artifacts/StrykerOutput
         fi
 
     - name: Upload Artifacts
