--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -57,7 +57,8 @@ jobs:
         -p:CoverletOutputFormat=cobertura
 
     - name: Pack
-      run: dotnet pack -o artifacts --configuration Release --no-restore
+      run: dotnet pack -p:PackageOutputPath="$(pwd)/artifacts" --configuration Release
+        --no-restore
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
