--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -22,7 +22,7 @@ defaults:
 
 
 jobs:
-  build-and-test:
+  build:
     name: Build & Test
     runs-on: ubuntu-latest
     steps:
@@ -67,9 +67,60 @@ jobs:
         path: |
           artifacts/*
 
+  build-standalone-binaries:
+    name: Build Standalone Binaries
+    needs: build
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+        - rid: win-x64
+          os: windows-latest
+          exe: verlite.exe
+        - rid: linux-x64
+          os: ubuntu-latest
+          exe: verlite
+        - rid: osx-x64
+          os: macos-latest
+          exe: verlite
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: '0'
+
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: |
+          3.1.x
+          5.0.x
+          6.x
+          7.x
+
+    - name: Publish
+      run: |
+        dotnet publish -r "${rid}" -c Release src/Verlite.CLI/Verlite.CLI.csproj -p:PublishAot=true -o build
+        mkdir -p artifacts
+        cp "build/${exe}" "artifacts/${exe}"
+        cd artifacts/
+        tar -zcvf "verlite-${rid}.tar.gz" "${exe}"
+        rm "${exe}"
+      env:
+        rid: ${{ matrix.rid }}
+        exe: ${{ matrix.exe }}
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v2
+      if: success() || failure()
+      with:
+        name: artifacts
+        path: |
+          artifacts/*
+
+
   mutation-tests:
     name: Mutation Test
-    needs: build-and-test
+    needs: build
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
@@ -117,7 +168,7 @@ jobs:
 
   integration-tests:
     name: Integration Tests
-    needs: build-and-test
+    needs: build
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -144,7 +195,10 @@ jobs:
 
   publish:
     name: Publish
-    needs: integration-tests
+    needs:
+    - build
+    - build-standalone-binaries
+    - integration-tests
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
