--- a/.github/shared.yml
+++ b/.github/shared.yml
@@ -6,7 +6,7 @@ definitions:
       shell: bash
 
   checkout: &checkout
-    uses: actions/checkout@v2
+    uses: actions/checkout@v3
     with:
       fetch-depth: '0'
 
@@ -131,6 +131,7 @@ definitions:
         mkdir -p artifacts
         cp "build/${exe}" "artifacts/${exe}"
         cd artifacts/
+        ./${exe} --version
         tar -zcvf "verlite-${rid}.tar.gz" "${exe}"
         rm "${exe}"
       env:
