--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -17,7 +17,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         fetch-depth: '0'
 
@@ -86,7 +86,7 @@ jobs:
           os: macos-latest
           exe: verlite
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         fetch-depth: '0'
 
@@ -105,6 +105,7 @@ jobs:
         mkdir -p artifacts
         cp "build/${exe}" "artifacts/${exe}"
         cd artifacts/
+        ./${exe} --version
         tar -zcvf "verlite-${rid}.tar.gz" "${exe}"
         rm "${exe}"
       env:
