--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -142,9 +142,9 @@ jobs:
         dotnet tool install --global dotnet-stryker --version 3.2.0
         cd tests/UnitTests
         if [[ "$GITHUB_REF" == "refs/heads/master" ]]; then
-          dotnet stryker --reporter html --reporter dashboard --reporter progress --version master --log-to-file
+          dotnet stryker --reporter html --reporter dashboard --reporter progress --version master # --log-to-file
         else
-          dotnet stryker --reporter html --reporter progress --log-to-file
+          dotnet stryker --reporter html --reporter progress # --log-to-file
         fi
       env:
         STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
