Checkout on release for `hub`

--- a/.github/deploy-release.yml
+++ b/.github/deploy-release.yml
@@ -34,6 +34,9 @@ jobs:
     - build
     - build-standalone-binaries
     steps:
+    - *checkout
+    - *setup-dotnet
+    - *setup-nuget
     - *download-artifacts
     - name: 'Create Release'
       run: |
