Only get minor and patch versions from Dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,9 @@ updates:
     all:
       patterns:
         - "*"
+      update-types:
+        - "minor"
+        - "patch"
+  ignore:
+    - dependency-name: "*"
+      update-types: ["version-update:semver-major"]
