--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -38,6 +38,7 @@ jobs:
           5.0.x
           6.x
           7.x
+          8.x
 
     - name: Restore
       run: dotnet restore
@@ -82,7 +83,7 @@ jobs:
           os: ubuntu-latest
           exe: verlite
         - rid: osx-x64
-          os: macos-latest
+          os: macos-13
           exe: verlite
     steps:
     - uses: actions/checkout@v3
@@ -97,10 +98,11 @@ jobs:
           5.0.x
           6.x
           7.x
+          8.x
 
     - name: Publish
       run: |
-        dotnet publish -r "${rid}" -c Release src/Verlite.CLI/Verlite.CLI.csproj -p:PublishAot=true -o build
+        dotnet publish -r "${rid}" -c Release src/Verlite.CLI/Verlite.CLI.csproj -p:VerliteAot=true -o build
         mkdir -p artifacts
         cp "build/${exe}" "artifacts/${exe}"
         cd artifacts/
@@ -136,6 +138,7 @@ jobs:
           5.0.x
           6.x
           7.x
+          8.x
 
     - name: Mutation Test
       run: |
@@ -188,6 +191,7 @@ jobs:
           5.0.x
           6.x
           7.x
+          8.x
 
     - name: Run Integration Tests
       run: |
