--- a/.github/shared.yml
+++ b/.github/shared.yml
@@ -19,6 +19,7 @@ definitions:
         5.0.x
         6.x
         7.x
+        8.x
 
   setup-nuget: &setup-nuget
     name: Setup NuGet
@@ -120,14 +121,14 @@ definitions:
             os: ubuntu-latest
             exe: verlite
           - rid: osx-x64
-            os: macos-latest
+            os: macos-13
             exe: verlite
     steps:
     - *checkout
     - *setup-dotnet
     - name: Publish
       run: |
-        dotnet publish -r "${rid}" -c Release src/Verlite.CLI/Verlite.CLI.csproj -p:PublishAot=true -o build
+        dotnet publish -r "${rid}" -c Release src/Verlite.CLI/Verlite.CLI.csproj -p:VerliteAot=true -o build
         mkdir -p artifacts
         cp "build/${exe}" "artifacts/${exe}"
         cd artifacts/
