--- a/.github/continuous-delivery.yml
+++ b/.github/continuous-delivery.yml
@@ -47,7 +47,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-13]
     steps:
     - *checkout
     - *setup-dotnet
