--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -65,6 +65,7 @@ jobs:
       if: success() || failure()
       with:
         name: artifacts
+        if-no-files-found: error
         path: |
           artifacts/*
 
@@ -116,10 +117,10 @@ jobs:
       uses: actions/upload-artifact@v4
       if: success() || failure()
       with:
-        name: artifacts
+        name: artifacts-${{ matrix.rid }}
+        if-no-files-found: error
         path: |
           artifacts/*
-
 
   mutation-tests:
     name: Mutation Test
@@ -166,7 +167,8 @@ jobs:
       uses: actions/upload-artifact@v4
       if: success() || failure()
       with:
-        name: artifacts
+        name: artifacts-mutation-test
+        if-no-files-found: error
         path: |
           artifacts/*
 
@@ -227,6 +229,10 @@ jobs:
 
     - name: Download Artifacts
       uses: actions/download-artifact@v4
+      with:
+        path: artifacts
+        pattern: '*'
+        merge-multiple: true
 
     - name: Publish Nuget GitHub
       run: dotnet nuget push 'artifacts/*.nupkg' -k ${GITHUB_TOKEN} -s github --skip-duplicate
