--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -65,6 +65,7 @@ jobs:
       if: success() || failure()
       with:
         name: artifacts
+        if-no-files-found: error
         path: |
           artifacts/*
 
@@ -116,10 +117,10 @@ jobs:
       uses: actions/upload-artifact@v4
       if: success() || failure()
       with:
-        name: artifacts
+        name: artifacts-${{ matrix.rid }}
+        if-no-files-found: error
         path: |
           artifacts/*
-
 
   mutation-tests:
     name: Mutation Test
@@ -166,7 +167,8 @@ jobs:
       uses: actions/upload-artifact@v4
       if: success() || failure()
       with:
-        name: artifacts
+        name: artifacts-mutation-test
+        if-no-files-found: error
         path: |
           artifacts/*
 
