--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -42,6 +42,8 @@ jobs:
 
 
     - name: Verify Tag
+      env:
+        DOTNET_SYSTEM_GLOBALIZATION_INVARIANT: 1
       run: |
         [[ "v$(minver --tag-prefix=v)" == "${GITHUB_REF#refs/*/}" ]] # error out if the versions don't match
 
