--- a/.github/continuous-integration.yml
+++ b/.github/continuous-integration.yml
@@ -19,10 +19,11 @@ defaults: *default-defaults
 jobs:
   build:
     name: 'Build & Test'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
     - *checkout
     - *setup-dotnet
+    - *setup-openssl
     - *restore
     - *build
     - *test
@@ -37,6 +38,7 @@ jobs:
     steps:
     - *checkout
     - *setup-dotnet
+    - *setup-openssl
     - *mutation-test
     - *mutation-test-archive
     - *mutation-test-upload-artifacts
@@ -47,8 +49,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-13]
+        os: [ubuntu-24.04, windows-latest, macos-13]
     steps:
     - *checkout
     - *setup-dotnet
+    - *setup-openssl
     - *run-integration-tests
